--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
                             <input id="triangle-height" class="w-24 text-2xl p-2 rounded-sm" type="text" placeholder="h">
                             <span>cm</span>
                         </div>
+                        <div>
+                            <p class="text-2xl">Area Of Triangle: <span id="triangle-area"></span> <span>cm</span><sup>2</sup></p>
+                        </div>
 
-                        <div class="card-actions justify-end">
+                        <div class="card-actions">
                             <button onclick="triangleCalculateArea()" class="btn btn-primary w-full">Calculate</button>
                         </div>
                     </div>
