added rectangle calculation

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                             <input id="rectangle-width" type="text" class="w-24 text-2xl p-2 rounded-sm" placeholder="Width">
                             <span class="mr-4 ml-2">cm</span>
                         </div>
-                        <div class="card-actions justify-end">
+                        <div>
+                            <p class="text-2xl">Area Of Rectangle: <span id="rectangle-area"></span> <span>cm</span></p>
+                        </div>
+                        <div class="card-actions">
                             <button onclick="rectangleCalculateArea()" class="btn btn-primary w-full">Calculate</button>
                         </div>
                     </div>
